--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </h1>
   <div class="h-auto max-w-2xl bg-white shadow-lg rounded-lg p-8 text-center transform transition hover:scale-105">
     <p id="quote" class="text-xl md:text-2xl font-medium text-gray-800 italic">
-      "{{ userList }}"
+      "{{ quoteList }}"
     </p>
   </div>
   <button
